--- a/Teste.html
+++ b/Teste.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <img src="foto_melania.jpg" alt="foto Mel" class="photo">
-            <h1 id="title">Melânia Grando</h1>
+            <h1 id="title">Mel Grando</h1>
         </header>
         
         <section>
